--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,7 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+systemProps.https.proxyPort=1080
+systemProps.https.proxyHost=127.0.0.1
+systemProps.http.proxyPort=1080
+systemProps.http.proxyHost=127.0.0.1
