--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        // 添加上传到jcenter所需的插件
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
@@ -24,3 +27,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
